--- a/notebooks/polars-analyze.ipynb
+++ b/notebooks/polars-analyze.ipynb
@@ -159,7 +159,13 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5fc65fb2",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "week_chart = (\n",
@@ -170,7 +176,7 @@
     "        y=alt.Y(\"total_act_energy_kwh\", type=\"quantitative\").title(\"Energy [kWh]\"),\n",
     "        color=alt.Color(\"device_phase\", type=\"nominal\").title(\"Device / Phase\"),\n",
     "    )\n",
-    "    .properties(title=\"Energy by week\", width=400, height=400)\n",
+    "    .properties(title=\"Energy by week\", width=600, height=400)\n",
     ")\n",
     "week_chart\n"
    ]
