Add charts per phase

--- a/notebooks/polars-analyze.ipynb
+++ b/notebooks/polars-analyze.ipynb
@@ -81,7 +81,7 @@
    "source": [
     "week_day_chart = (\n",
     "    alt.Chart(week_day)\n",
-    "    .mark_bar(size=15, tooltip=True)\n",
+    "    .mark_bar(size=25, tooltip=True)\n",
     "    .encode(\n",
     "        x=alt.X(field=\"day_of_week\", type=\"nominal\").title(\"Day of week\").sort({\"field\": \"day_of_week_num\"}),\n",
     "        y=alt.Y(field=\"total_act_energy_kwh\", type=\"quantitative\").title(\"Energy [kWh]\"),\n",
@@ -89,6 +89,30 @@
     "        order=alt.Order(field=\"device_phase\", type=\"nominal\"),\n",
     "    )\n",
     "    .properties(title=\"Energy by day of week\", width=250, height=400)\n",
+    "    .configure_view(stroke=None)\n",
+    ")\n",
+    "week_day_chart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e29add9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week_day_chart = (\n",
+    "    alt.Chart(week_day)\n",
+    "    .mark_bar(size=10, tooltip=True)\n",
+    "    .encode(\n",
+    "        column=alt.Column(\"device_phase\", type=\"nominal\").title(\"Phase\"),\n",
+    "        x=alt.X(field=\"day_of_week\", type=\"nominal\").title(\"Day of week\").sort({\"field\": \"day_of_week_num\"}),\n",
+    "        y=alt.Y(field=\"total_act_energy_kwh\", type=\"quantitative\").title(\"Energy [kWh]\"),\n",
+    "        color=alt.Color(field=\"device_phase\", type=\"nominal\").title(\"Phase\"),\n",
+    "        order=alt.Order(field=\"device_phase\", type=\"nominal\"),\n",
+    "    )\n",
+    "    .properties(title=\"Energy by day of week and phase\", width=110, height=200)\n",
+    "    .configure_view(stroke=None)\n",
     ")\n",
     "week_day_chart"
    ]
@@ -127,9 +151,32 @@
     "    .encode(\n",
     "        x=alt.X(\"date\", type=\"temporal\").title(\"Date\"),\n",
     "        y=alt.Y(\"total_act_energy_kwh\", type=\"quantitative\").title(\"Energy [kWh]\"),\n",
-    "        color=alt.Color(\"device_phase\", type=\"nominal\").title(\"Device / Phase\"),\n",
+    "        color=alt.Color(\"device_phase\", type=\"nominal\").title(\"Phase\"),\n",
     "    )\n",
     "    .properties(title=\"Energy by month\", width=400, height=400)\n",
+    "    .configure_view(stroke=None)\n",
+    ")\n",
+    "chart"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cb5cae5c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chart = (\n",
+    "    alt.Chart(month)\n",
+    "    .mark_bar(size=20, tooltip=True)\n",
+    "    .encode(\n",
+    "        column=alt.Column(\"device_phase\", type=\"nominal\").title(\"Phase\"),\n",
+    "        x=alt.X(\"date\", type=\"temporal\").title(\"Date\"),\n",
+    "        y=alt.Y(\"total_act_energy_kwh\", type=\"quantitative\").title(\"Energy [kWh]\"),\n",
+    "        color=alt.Color(\"device_phase\", type=\"nominal\").title(\"Phase\"),\n",
+    "    )\n",
+    "    .properties(title=\"Energy by month and phase\", width=200, height=200)\n",
+    "    .configure_view(stroke=None)\n",
     ")\n",
     "chart"
    ]
@@ -179,6 +226,27 @@
     "    .properties(title=\"Energy by week\", width=600, height=400)\n",
     ")\n",
     "week_chart\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5c880d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "week_chart = (\n",
+    "    alt.Chart(week)\n",
+    "    .mark_bar(size=5, tooltip=True)\n",
+    "    .encode(\n",
+    "        column=alt.Column(\"device_phase\", type=\"nominal\").title(\"Device / Phase\"),\n",
+    "        x=alt.X(\"date\", type=\"temporal\").title(\"Date\"),\n",
+    "        y=alt.Y(\"total_act_energy_kwh\", type=\"quantitative\").title(\"Energy [kWh]\"),\n",
+    "        color=alt.Color(\"device_phase\", type=\"nominal\").title(\"Device / Phase\"),\n",
+    "    )\n",
+    "    .properties(title=\"Energy by week and phase\", width=200, height=200)\n",
+    ")\n",
+    "week_chart"
    ]
   }
  ],
